[project]
name = "lsaBGC-Pan"
authors = [{name="Rauf Salamzade", email="salamzader@gmail.com"}]
version = "1.0.2"
readme = "README.md"
description = "lsaBGC-Pan: a workflow/suite for pan-BGC-ome analyses."

[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[tool.setuptools]
script-files=['docker/LSABGC',
               'scripts/processAndReformatUserProvidedGenbanks.py',
               'scripts/genbankToProkkaGFF.py',
               'scripts/popstrat',
               'scripts/phylogenate',
               'scripts/GSeeF',
               'bin/lsaBGC-Cluster',
               'bin/lsaBGC-See',
               'bin/lsaBGC-ComprehenSeeIve',
               'bin/lsaBGC-MIBiGMapper',
               'bin/lsaBGC-Reconcile',
               'bin/lsaBGC-Sociate',
               'workflows/lsaBGC-Pan']

[tool.setuptools.packages.find]
where = ["src"]
